# GAMES101-Homeworks

Homework1/Assignment1/: CMakeLists.txt  main.cpp
Homework2/Assignment2/: main.cpp  rasterizer.cpp  rasterizer.hpp
Homework3/Assignment3/: CMakeLists.txt  Shader.hpp  Texture.hpp  Triangle.hpp  main.cpp  rasterizer.cpp
Homework4/Assignment4/: CMakeLists.txt  main.cpp
Homework5/Assignment5/: CMakeLists.txt  Renderer.cpp  Triangle.hpp
Homework6/Assignment6/: BVH.cpp  Bounds3.hpp  Renderer.cpp  Triangle.hpp  main.cpp
Homework7/Assignment7/: BVH.cpp  Bounds3.hpp  Material.hpp  Renderer.cpp  Scene.cpp  Triangle.hpp  main.cpp
